--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     outline: none;
  }
  h2{
-    color: #fff;
+     color: var(--text-color);
     letter-spacing: .5em;
     font-weight: 900;
     
