--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
- body {
-     font-family: -apple-system, 'Inter', sans-serif;
- }
+ 
 
  :root {
      --body-bg:hsl(0, 0%, 98%);
@@ -19,29 +17,36 @@
  }
 
  body {
-     margin: 0;
+    font-family: -apple-system, 'Inter', sans-serif;
+     padding:5% 30% 0% 30%;
      background: var(--body-bg);
-     display: flex;
-     align-items: center;
-     flex-direction: column;
-     justify-content: center;
-     margin-top: 100px;
+     
+     
     /* background-image: url(/images/bg-desktop-dark.jpg) no-repeat; */
  }
 .card.todos{
     margin-top: 40px;
     border-radius: 0;
-    padding:0 40px 0 0;
+    padding:0;
+    max-width: 100%;
+
+
     
    
 }
+#add_td{
+    width: 99%;
+    padding:5% 0% 1% 1%;
+    font-size: 1.1em;
+    
+}
 
  .card {
-     padding: 15px 20px 15px 20px;
+     padding: 2% 0% 0% 1%;
      background: var(--card-bg);
      box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, .3);
      border: 1px solid var(--card-bd-col);
-     width: 500px;
+     width: 100%;
      border-radius: 10px;
     color: var(--text-color);
      
@@ -80,4 +85,8 @@
         height: 1.15em;
         border: 0.15em solid currentColor;
         
+  }
+  p{
+    color: #fff;
+    font-size: .8em;
   }
